--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -28,3 +28,40 @@
   margin: 1.5rem;
   line-height: 150%;
 }
+
+.infoContent {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.box {
+  background-color: #fafafa;
+  padding: 14px 44px;
+  border-radius: 4px;
+  transition: transform 0.4s;
+}
+
+.box:hover {
+  transform: scale(1.03);
+}
+
+@media screen and (max-width: 580px) {
+  .hero {
+    max-width: 80%;
+  }
+
+  .title {
+    font-size: 24px;
+  }
+
+  .infoContent {
+    flex-direction: column;
+  }
+
+  .box {
+    width: 80%;
+    margin-bottom: 14px;
+    text-align: center;
+  }
+}
